--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body * {
 
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-image: url(../img/page-background.png);
+    background-size: cover;
 }
 body > header,
 body > main,
@@ -16,10 +18,9 @@ body > main,
     margin-left: calc(50% - 500px);
     margin-right: calc(50% - 500px);
     display: inline-block;
-    margin-top: 20px;
 }
 body > main {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 header > img {
     height: 52px;
@@ -36,16 +37,17 @@ nav > a {
     font-size: 20px;
     line-height: 20px;
     text-decoration: none;
-    color: black;
+    color: #000;
 }
 nav > a:hover {
     border-bottom: solid 2px red;
 }
 nav > a:active {
-    color: #f514aa
+    color: #1410d4;
+    
 }
 h1{
-    color: #000;
+    color: #fff;
     text-align: center;   
 }
 input:focus::placeholder {
@@ -56,8 +58,8 @@ input:focus::placeholder {
     border-radius: 20px;
     border: solid;
     padding-bottom: 30px;
-    background-image: url(../img/box-background.png);
-    background-size: cover;
+    background-image: url(../img/page-background.png);
+    background-position: bottom;
 }
 
 ol {
@@ -66,11 +68,9 @@ ol {
     margin-right: auto;
     list-style-position: inside;
     list-style-type: decimal;
-    color: black;
+    color: #000;
   }
   #done {
-      background-color: green;
+      background-color: #008000;
   }
 
-
-  
